New permission for store managment : can_access_all_store; Store model new property : users andd description ; Store list view edited ;

--- a/src/stores/templates/stores/store_create.html
+++ b/src/stores/templates/stores/store_create.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <h2>Nouveau magasin</h2>
-        <p>Ajouter un magasin pour commencer</p>
+        <p>Ajouter un magasin</p>
         <form method="POST">
             {% csrf_token %}
             <div class="form-content">
