--- a/src/stores/static/css/stores/form.css
+++ b/src/stores/static/css/stores/form.css
@@ -1,8 +1,7 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 90vh;
+    padding: 2rem;
 }
 h2 {
     margin-bottom: 2rem;
