--- a/src/quickstockapp/templates/quickstockapp/dashboard.html
+++ b/src/quickstockapp/templates/quickstockapp/dashboard.html
@@ -12,7 +12,7 @@
 
 {% block body %}
 
-<div class="period">
+<div class="stats-display period">
     <div>
         <button class="{% if not request.session.stats_displayed %}protected-action{% endif %} stats-display-btn" 
                 data-callback="displayStats">
@@ -33,35 +33,9 @@
             </span>    
         </button>
     </div>
-    <div class="period_form">
-        <span>Période :</span>
-        <form action="/dashbord/" method="GET">
-            <select name="current_period" id="period">
-                {% for period in periods %}
-                    {% if period.month == current_month and period.year == current_year %}
-                    
-                    <option selected value="{{ period.month }}-{{ period.year }}">
-                        {% if period.month == now_period.month and period.year == now_period.year %}
-                        Ce mois-ci
-                        {% else %}
-                        {{ period.month|stringformat:'02d'  }}/{{ period.year }}
-                        {% endif %}
-                    </option>
-                    {% else %}
-                    <option value="{{ period.month }}-{{ period.year }}">
-                        {% if period.month == now_period.month and period.year == now_period.year %}
-                        Ce mois-ci
-                        {% else %}
-                        {{ period.month|stringformat:'02d'  }}/{{ period.year }}
-                        {% endif %}
-                    </option>
-                    {% endif %}
-                    
-                {% endfor %}
-            </select>
-            <button type="submit" style="display: none;"></button>
-        </form>
-    </div>
+   <div class="period-picker">
+        {% include 'quickstockapp/partials/date_range_picker.html' with opens='left' minDate=date_range_min maxDate=date_range_max startDate=from_date endDate=to_date %}
+   </div>
 </div>
 <div class="stats">
     <div>
