--- a/src/quickstockapp/templates/quickstockapp/dashboard.html
+++ b/src/quickstockapp/templates/quickstockapp/dashboard.html
@@ -34,7 +34,7 @@
         </button>
     </div>
    <div class="period-picker">
-        {% include 'quickstockapp/partials/date_range_picker.html' with opens='left' minDate=date_range_min maxDate=date_range_max startDate=from_date endDate=to_date %}
+        {% include 'quickstockapp/partials/date_range_picker.html' with opens='left' maxDate=date_range_max startDate=from_date endDate=to_date %}
    </div>
 </div>
 <div class="stats">
