--- a/src/quickstockapp/templates/quickstockapp/partials/date_range_picker.html
+++ b/src/quickstockapp/templates/quickstockapp/partials/date_range_picker.html
@@ -23,7 +23,7 @@
                 "firstDay": 1
             },
             "opens": "{{ opens }}",
-            "minDate": "{{ minDate }}",
+            // "minDate": "{{ minDate }}",
             "maxDate": "{{ maxDate }}",
             "startDate": "{{ startDate }}",
             "endDate": "{{ endDate }}",
